--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ alink="##a33a10">
 <center><img src="https://media1.tenor.com/m/lViDYK8-r0kAAAAd/hamster-kombat-hamster.gif"/></center>
 </h3></center>
 Не забудьте посетить 2 других моих веб-страницы:
-<center><h4> <a href="https://pikapika7.github.io/-2/">"Обзор ресурсов интернет"</a> и <a href="file:///G:/Utilities/Notepad++/%D1%81%D0%B0%D0%B9%D1%82%20(%D0%B2%D0%B5%D1%80%D0%B0)%202.html">"Путеводитель по Уфе"</a>
+<center><h4> <a href="https://pikapika7.github.io/-2/">"Обзор ресурсов интернет"</a> и <a href="https://pikapika7.github.io/-3/">"Путеводитель по Уфе"</a>
 </h4></center>
 </body>
 </html>
